[project]
name = "snake-game"
version = "0.1.0"
description = "Arcade-based Snake Game"
authors = [
    {name = "Chris",email = "chris@csie.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade (>=3.3.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
